--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -7,13 +7,13 @@ jobs:
   test-secrets:
     runs-on: ubuntu-latest
     steps:
-      - name: Check GHR_USERNAME Secret
+      - name: Check GH_USERNAME Secret
         run: |
-          echo "GHR_USERNAME is ${{ secrets.GHR_USERNAME }}"
+          echo "GH_USERNAME is ${{ secrets.GH_USERNAME }}"
       
-      - name: Check GHR_PASSWORD Secret
+      - name: Check GHR_TOKEN Secret
         run: |
-          echo "GHR_PASSWORD is ${{ secrets.GHR_PASSWORD }}"
+          echo "GHR_TOKEN is ${{ secrets.GHR_TOKEN }}"
 
       - name: Check AZURE_CREDENTIALS Secret
         run: |
