--- a/.github/workflows/python-action.yml
+++ b/.github/workflows/python-action.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.GHR_USERNAME }}
-        password: ${{ secrets.GHR_PASSWORD }}
+        username: ${{ secrets.GH_USERNAME }}
+        password: ${{ secrets.GHR_TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
