--- a/.github/workflows/python-action.yml
+++ b/.github/workflows/python-action.yml
@@ -7,6 +7,13 @@ on:
         description: 'The name of the Docker image'
         required: true
         type: string
+    secrets:
+      GH_USER:
+        required: true
+      GHCR_TOKEN:
+        required: true
+      AZURE_TOKEN:
+        required: true
 
 jobs:
   build-and-push-image:
@@ -21,22 +28,21 @@ jobs:
           python-version: '3.x'
 
       - name: Convert repository name to lowercase
-        id: repo-name-lowercase
         run: echo "REPO_NAME_LOWERCASE=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.GHR_TOKEN }}
+          registry: docker.io
+          username: ${{ secrets.GH_USER }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image to Docker Hub
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ env.REPO_NAME_LOWERCASE }}/${{ inputs.image_name }}:latest
+          tags: docker.io/${{ secrets.GH_USER }}/${{ inputs.image_name }}:latest
 
   deploy-to-aks:
     needs: build-and-push-image
@@ -46,10 +52,16 @@ jobs:
         run: |
           curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
 
+      - name: Install kubelogin
+        run: |
+          curl -LO "https://github.com/Azure/kubelogin/releases/download/v0.0.10/kubelogin-linux-amd64.zip"
+          unzip kubelogin-linux-amd64.zip
+          sudo mv bin/linux_amd64/kubelogin /usr/local/bin
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_TOKEN }}
 
       - name: Set AKS Context
         run: |
@@ -58,4 +70,4 @@ jobs:
       - name: Deploy to AKS
         run: |
           kubectl create namespace my-app-ns || true  # Ensure the namespace exists
-          kubectl set image deployment/my-app-deployment my-app=ghcr.io/${{ env.REPO_NAME_LOWERCASE }}/${{ inputs.image_name }}:latest -n my-app-ns
+          kubectl set image deployment/my-app-deployment my-app=docker.io/${{ secrets.GH_USER }}/${{ inputs.image_name }}:latest -n my-app-ns
