--- a/.github/workflows/python-action.yml
+++ b/.github/workflows/python-action.yml
@@ -8,11 +8,11 @@ on:
         required: true
         type: string
     secrets:
-      GH_USER:
+      GH_USERNAME:
         required: true
-      GHCR_PAT:
+      GHCR_TOKEN:
         required: true
-      AZURE_TOKEN:
+      AZURE_CREDENTIALS:
         required: true
 
 jobs:
@@ -34,15 +34,15 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: docker.io
-          username: ${{ secrets.GH_USER }}
-          password: ${{ secrets.GHCR_PAT }}
+          username: ${{ secrets.GH_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Build and push Docker image to Docker Hub
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
-          tags: docker.io/${{ secrets.GH_USER }}/${{ inputs.image_name }}:latest
+          tags: docker.io/${{ secrets.GH_USERNAME }}/${{ inputs.image_name }}:latest
 
   deploy-to-aks:
     needs: build-and-push-image
@@ -61,7 +61,7 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_TOKEN }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Set AKS Context
         run: |
@@ -70,4 +70,4 @@ jobs:
       - name: Deploy to AKS
         run: |
           kubectl create namespace my-app-ns || true  # Ensure the namespace exists
-          kubectl set image deployment/my-app-deployment my-app=docker.io/${{ secrets.GH_USER }}/${{ inputs.image_name }}:latest -n my-app-ns
+          kubectl set image deployment/my-app-deployment my-app=docker.io/${{ secrets.GH_USERNAME }}/${{ inputs.image_name }}:latest -n my-app-ns
