--- a/.github/workflows/python-action.yml
+++ b/.github/workflows/python-action.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: docker.io
+          registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GHCR_TOKEN }}
 
