--- a/.github/workflows/python-action.yml
+++ b/.github/workflows/python-action.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ secrets.GH_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
+          password: ${{ secrets.GHR_TOKEN }}
 
       - name: Build and push Docker image to Docker Hub
         uses: docker/build-push-action@v3
